@@ -100,6 +100,7 @@ def test_signal_integration(django_elasticapm_client):
     assert exc['type'] == 'ValueError'
     assert exc['message'] == u"ValueError: invalid literal for int() with base 10: 'hello'"
     assert event['culprit'] == 'tests.contrib.django.django_tests.test_signal_integration'
+    assert event['handled'] is False
 
 
 def test_view_exception(django_elasticapm_client, client):
@@ -113,6 +114,7 @@ def test_view_exception(django_elasticapm_client, client):
     assert exc['type'] == 'Exception'
     assert exc['message'] == 'Exception: view exception'
     assert event['culprit'] == 'tests.contrib.django.testapp.views.raise_exc'
+    assert event['handled'] is False
 
 
 def test_view_exception_debug(django_elasticapm_client, client):
@@ -286,6 +288,7 @@ def test_request_middleware_exception(django_elasticapm_client, client):
         assert exc['type'] == 'ImportError'
         assert exc['message'] == 'ImportError: request'
         assert event['culprit'] == 'tests.contrib.django.testapp.middleware.process_request'
+        assert event['handled'] is False
 
 
 def test_response_middlware_exception(django_elasticapm_client, client):
@@ -304,6 +307,7 @@ def test_response_middlware_exception(django_elasticapm_client, client):
         assert exc['type'] == 'ImportError'
         assert exc['message'] == 'ImportError: response'
         assert event['culprit'] == 'tests.contrib.django.testapp.middleware.process_response'
+        assert event['handled'] is False
 
 
 def test_broken_500_handler_with_middleware(django_elasticapm_client, client):
@@ -330,6 +334,8 @@ def test_broken_500_handler_with_middleware(django_elasticapm_client, client):
         assert exc['type'] == 'ValueError'
         assert exc['message'] == 'ValueError: handler500'
         assert event['culprit'] == 'tests.contrib.django.testapp.urls.handler500'
+        assert event['handled'] is False
+
 
 def test_view_middleware_exception(django_elasticapm_client, client):
     with override_settings(**middleware_setting(django.VERSION,
@@ -345,6 +351,7 @@ def test_view_middleware_exception(django_elasticapm_client, client):
         assert exc['type'] == 'ImportError'
         assert exc['message'] == 'ImportError: view'
         assert event['culprit'] == 'tests.contrib.django.testapp.middleware.process_view'
+        assert event['handled'] is False
 
 
 def test_exclude_modules_view(django_elasticapm_client, client):
